--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "SET NODE_ENV=development & nodemon server/server.js & webpack-dev-server --open",
+    "dev": "NODE_ENV=development & nodemon server/server.js & webpack-dev-server --open",
     "build": "NODE_ENV=production & webpack"
   },
   "repository": {
