--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
-    "d3": "^5.15.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "d3": "^5.15.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "pg": "^7.17.0",
     "react": "^16.12.0",
