--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.0",
+    "nord": "^0.2.1",
     "path": "^0.12.7",
     "pg": "^7.17.0",
     "react": "^16.12.0",
