--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "path": "^0.12.7",
     "pg": "^7.17.0",
     "react": "^16.12.0",
+    "react-dnr": "^0.4.0",
     "react-dom": "^16.12.0",
     "webpack": "^4.41.5"
   },
